# modular-eda

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: modular-eda_test.cpp
